<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvSpecification"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/specification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSpecification"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="51dp" />

    <TextView
        android:id="@+id/tvSpecsDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1"
        android:text="@string/content_specs_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvSpecification"
        app:layout_editor_absoluteX="106dp"
        app:layout_editor_absoluteY="51dp" />

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSpecsDisplay"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="105dp" />

    <TextView
        android:id="@+id/tvSpecsSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/content_specs_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvSpecsDisplay"
        app:layout_editor_absoluteX="106dp"
        app:layout_editor_absoluteY="105dp" />

    <TextView
        android:id="@+id/tvbattery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/battery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSpecsSize"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="145dp" />

    <TextView
        android:id="@+id/tvSpecsBattery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/content_specs_battery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvSpecsSize"
        app:layout_editor_absoluteX="106dp"
        app:layout_editor_absoluteY="145dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="266dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="106dp" />


</androidx.constraintlayout.widget.ConstraintLayout>